# inferGPT

./: .gitignore  CMakeLists.txt  README.md  main.cpp  pyproject.toml  setup.sh
include/: benchmark.h  model.h  model_quant.h  ops.h  quantize.h  tensor.h
scripts/: absmax.py
src/: benchmark.cpp  bpe.cpp  load_gpt2.cpp  load_gpt2_quant.cpp  model.cpp  model_quant.cpp  ops.cpp  quantize.cpp
